<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/greeting"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/button"
        android:text="@string/nano_project_1"
        style="@style/CodeFont"
        android:onClick="fireToast" />

    <Button
        android:text="@string/nano_project_2"
        android:id="@+id/button2"
        style="@style/CodeFont"
        android:onClick="fireToast" />

    <Button
        android:text="@string/nano_project_3"
        android:id="@+id/button3"
        style="@style/CodeFont"
        android:onClick="fireToast" />


    <Button
        android:text="@string/nano_project_4"
        android:id="@+id/button4"
        style="@style/CodeFont"
        android:onClick="fireToast" />


    <Button
        android:text="@string/nano_project_5"
        android:id="@+id/button5"
        style="@style/CodeFont"
        android:onClick="fireToast" />


    <Button
        android:text="@string/nano_project_6"
        android:id="@+id/button6"
        style="@style/CodeFont"
        android:onClick="fireToast" />

</LinearLayout>